--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,10 @@
         <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
         <a href="{{ url_for('logout') }}">Logout</a>
     {% endif %}
+    <p>
+        Forgot Your Password?
+        <a href="{{ url_for('reset_password_request') }}">Click to Reset It</a>
+    </p>
 </div>
 <hr>
 {% with messages = get_flashed_messages() %}
