Мега-Учебник Flask, Часть XII: Даты и время (издание 2018)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,7 @@
 {% extends 'bootstrap/base.html' %}
+{% block styles %}
+{{super()}}
+{% endblock %}
 
 {% block title %}
     {% if title %}{{ title }} - Microblog{% else %}Welcome to Microblog{% endif %}
@@ -48,4 +51,10 @@
         {# application content needs to be provided in the app_content block #}
         {% block app_content %}{% endblock %}
     </div>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    {{ moment.include_moment() }}
+     {{ moment.lang('ru') }}
 {% endblock %}
